--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,8 @@
 plugins {
-  id 'com.gradle.build-scan' version '1.0'
   id 'java'
-  id 'eclipse'
-  id 'pl.allegro.tech.build.axion-release' version '1.3.5'
+  id 'pl.allegro.tech.build.axion-release' version '1.4.1'
   id 'maven-publish'
-  id 'com.jfrog.bintray' version '1.7'
+  id 'com.jfrog.bintray' version '1.7.2'
   id 'findbugs'
   id 'checkstyle'
 }
@@ -31,11 +29,6 @@ project.group = 'com.fabahaba'
 project.version = scmVersion.version
 
 sourceCompatibility = 1.8
-
-buildScan {
-    licenseAgreementUrl = 'https://gradle.com/terms-of-service'
-    licenseAgree = 'yes'
-}
 
 repositories {
   jcenter()
@@ -89,7 +82,8 @@ task rmRedis(type:Exec) {
 }
 
 task wgetRedisModule(type:Exec) {
-  commandLine 'wget', '-N', '-O', 'redis/redismodule.h', 'https://raw.githubusercontent.com/antirez/redis/unstable/src/redismodule.h'
+  workingDir './redis'
+  commandLine 'wget', '-N', 'https://raw.githubusercontent.com/antirez/redis/unstable/src/redismodule.h'
 }
 
 task compileIntegModules(type:Exec) {
