--- a/build.gradle
+++ b/build.gradle
@@ -2,30 +2,29 @@ plugins {
   id 'java'
   id 'pl.allegro.tech.build.axion-release' version '1.4.1'
   id 'maven-publish'
-  id 'com.jfrog.bintray' version '1.7.2'
+  id 'com.jfrog.bintray' version '1.7.3'
   id 'findbugs'
   id 'checkstyle'
+  id 'jacoco'
 }
 
 scmVersion {
   tag {
     prefix = project.name
   }
-
   repository {
-    customUsername = "$System.env.AXION_RELEASE_GITHUB_TOKEN"
-    customPassword = ""
+    if (project.hasProperty("AXION_RELEASE_GITHUB_TOKEN")) {
+      customUsername = "$AXION_RELEASE_GITHUB_TOKEN"
+    }
   }
-
   createReleaseCommit true
   releaseCommitMessage { version, position -> "Release $project.name-$version" }
-
   checks {
     uncommittedChanges = false
   }
 }
 
-project.group = 'com.fabahaba'
+project.group = 'systems.comodal'
 project.version = scmVersion.version
 
 sourceCompatibility = 1.8
@@ -81,22 +80,23 @@ task rmRedis(type:Exec) {
   commandLine 'docker-compose', 'down'
 }
 
-task wgetRedisModule(type:Exec) {
-  workingDir './redis'
-  commandLine 'wget', '-N', 'https://raw.githubusercontent.com/antirez/redis/unstable/src/redismodule.h'
+task getRedisModule() {
+  OutputStream moduleHeaderFile = new File('./redis/redismodule.h').newOutputStream()
+  moduleHeaderFile << new URL('https://raw.githubusercontent.com/antirez/redis/unstable/src/redismodule.h').openStream()
+  moduleHeaderFile.close()
 }
 
 task compileIntegModules(type:Exec) {
   String dir = System.getProperty("user.dir");
-  commandLine 'docker', 'run', '--rm', '-v', "$dir/redis/:/tmp", 'jamespedwards42/alpine-gcc-make:latest', '/bin/sh', '-c', 'make -B -C /tmp/modules'
+  commandLine 'docker', 'run', '--rm', '-v', "$dir/redis/:/tmp", 'comodal/alpine-gcc-make:latest', '/bin/sh', '-c', 'make -B -C /tmp/modules'
 }
 
 task makeClean(type:Exec) {
   String dir = System.getProperty("user.dir");
-  commandLine 'docker', 'run', '--rm', '-v', "$dir/redis/:/tmp", 'jamespedwards42/alpine-gcc-make:latest', '/bin/sh', '-c', 'make -C /tmp/modules clean'
+  commandLine 'docker', 'run', '--rm', '-v', "$dir/redis/:/tmp", 'comodal/alpine-gcc-make:latest', '/bin/sh', '-c', 'make -C /tmp/modules clean'
 }
 
-compileIntegModules.dependsOn wgetRedisModule
+compileIntegModules.dependsOn getRedisModule
 startRedis.dependsOn compileIntegModules
 test.dependsOn startRedis
 test.finalizedBy rmRedis
@@ -107,33 +107,38 @@ task sourcesJar(type: Jar, dependsOn: classes) {
   classifier = 'sources'
 }
 
+task javadocJar(type: Jar, dependsOn: javadoc) {
+  from javadoc.destinationDir
+  classifier 'javadoc'
+}
+
 publishing {
   publications {
     mavenJava( MavenPublication ) {
       from components.java
-
       artifact sourcesJar
+      artifact javadocJar
     }
   }
 }
 
 artifacts {
   archives sourcesJar
+  archives javadocJar
 }
 
 bintray {
-  user = "$System.env.BINTRAY_USER"
-  key = "$System.env.BINTRAY_API_KEY"
-
+  user = System.getenv('BINTRAY_USER')
+  key = System.getenv('BINTRAY_API_KEY')
   publications = ['mavenJava']
-
   pkg {
-    repo = 'libs'
+    userOrg = 'comodal'
+    repo = 'libraries'
     name = project.name
     desc = 'Distributed systems locks backed by Redis.'
-    websiteUrl = 'https://github.com/jamespedwards42/' + project.name
-    vcsUrl = 'https://github.com/jamespedwards42/' + project.name
-    issueTrackerUrl = 'https://github.com/jamespedwards42/' + project.name + '/issues'
+    websiteUrl = 'https://github.com/comodal/' + project.name
+    vcsUrl = 'https://github.com/comodal/' + project.name
+    issueTrackerUrl = 'https://github.com/comodal/' + project.name + '/issues'
     licenses = ["Apache-2.0"]
     publish = true
     version {
@@ -141,7 +146,7 @@ bintray {
        vcsTag = scmVersion.tag.prefix + '-' + project.version
        gpg {
           sign = true
-          passphrase = "$System.env.BINTRAY_GPG_PASSPHRASE"
+          passphrase = System.getenv('BINTRAY_GPG_PASSPHRASE')
        }
     }
   }
@@ -151,7 +156,7 @@ bintrayUpload.onlyIf { !project.version.endsWith( 'SNAPSHOT' ) }
 
 findbugs {
   toolVersion = "+"
-  reportsDir = file("$project.buildDir/findbugsReports")
+  reportsDir = file("${buildDir}/findbugsReports")
   effort = "max"
   reportLevel = "low"
   ignoreFailures = false
@@ -168,9 +173,20 @@ tasks.withType(FindBugs) {
 checkstyle {
   config = resources.text.fromFile("checkstyle/google_checks.xml")
   configProperties = [samedir: "${projectDir}/checkstyle"]
-  reportsDir = file("$project.buildDir/checkstyleReports")
+  reportsDir = file("${buildDir}/checkstyleReports")
   toolVersion = "+"
   ignoreFailures = false
+}
+
+jacoco {
+  toolVersion = "+"
+}
+
+jacocoTestReport {
+  reports {
+    xml.enabled = true
+    html.enabled = true
+  }
 }
 
 gradle.addListener(new TestEventLogger())
