--- a/build.gradle
+++ b/build.gradle
@@ -156,7 +156,6 @@ bintrayUpload.onlyIf { !project.version.endsWith( 'SNAPSHOT' ) }
 
 findbugs {
   toolVersion = "+"
-  reportsDir = file("${buildDir}/findbugsReports")
   effort = "max"
   reportLevel = "low"
   ignoreFailures = false
@@ -172,8 +171,6 @@ tasks.withType(FindBugs) {
 
 checkstyle {
   config = resources.text.fromFile("checkstyle/google_checks.xml")
-  configProperties = [samedir: "${projectDir}/checkstyle"]
-  reportsDir = file("${buildDir}/checkstyleReports")
   toolVersion = "+"
   ignoreFailures = false
 }
@@ -193,20 +190,20 @@ gradle.addListener(new TestEventLogger())
 
 class TestEventLogger implements org.gradle.api.tasks.testing.TestListener {
 
-  public void beforeSuite(TestDescriptor suite) {
+  void beforeSuite(TestDescriptor suite) {
     if(suite.getClassName() != null) {
       println 'Running ' + suite.getClassName() + ' test suite.'
     }
   }
 
-  public void afterSuite(TestDescriptor suite, TestResult result) {
+  void afterSuite(TestDescriptor suite, TestResult result) {
   }
 
-  public void beforeTest(TestDescriptor test) {
+  void beforeTest(TestDescriptor test) {
     println '\n' + test.getName() + ' STARTED @ ' + new Date().toTimestamp()
   }
 
-  public void afterTest(TestDescriptor test, TestResult result) {
+  void afterTest(TestDescriptor test, TestResult result) {
     println test.getName() + ' ' + result.getResultType() + ' in ' + (result.getEndTime() - result.getStartTime()) + 'ms.'
   }
 }
